err/transhette.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/transhette'...
Listing './lib/python3.5/site-packages/transhette/locale'...
Listing './lib/python3.5/site-packages/transhette/locale/de'...
Listing './lib/python3.5/site-packages/transhette/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/transhette/locale/en'...
Listing './lib/python3.5/site-packages/transhette/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/transhette/locale/es'...
Listing './lib/python3.5/site-packages/transhette/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/transhette/locale/fr'...
Listing './lib/python3.5/site-packages/transhette/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/transhette/locale/it'...
Listing './lib/python3.5/site-packages/transhette/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/transhette/locale/nl'...
Listing './lib/python3.5/site-packages/transhette/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/transhette/locale/pl'...
Listing './lib/python3.5/site-packages/transhette/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/transhette/locale/ru'...
Listing './lib/python3.5/site-packages/transhette/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/transhette/locale/uk'...
Listing './lib/python3.5/site-packages/transhette/locale/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/transhette/media'...
Listing './lib/python3.5/site-packages/transhette/media/img'...
Listing './lib/python3.5/site-packages/transhette/media/js'...
Compiling './lib/python3.5/site-packages/transhette/polib.py'...
***   File "./lib/python3.5/site-packages/transhette/polib.py", line 53
    except ImportError, exc:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/transhette/templates'...
Listing './lib/python3.5/site-packages/transhette/templates/transhette'...
Listing './lib/python3.5/site-packages/transhette/templates/transhette/css'...
Listing './lib/python3.5/site-packages/transhette/templates/transhette/js'...
Listing './lib/python3.5/site-packages/transhette/templatetags'...
Compiling './lib/python3.5/site-packages/transhette/views.py'...
***   File "./lib/python3.5/site-packages/transhette/views.py", line 455
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/transhette-0.5.10.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
